--- a/DCW Website/index.html
+++ b/DCW Website/index.html
@@ -6,6 +6,7 @@
 	<title>KGB</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
 	<div class="cabecalho">
@@ -47,8 +48,69 @@
 						<p>Fornecemos gratuitamente aconselhamento legal sobre a atividade de Alojamento Local e ajudamo-lo a decorar e equipar o seu espaço da forma mais atrativa e eficiente</p>
 					</div>
 				</div>
+				<div id="but"><button type="button" href=# class="css3button">Solicitar serviço</button></div>
 			</div>
 	</div>
+	<div class="perfil" align="center">
+		<h2 align="center">Perfil</h2>
+		<div class="bigb2">
+			<div class="icon1" align="center"><i class="fa fa-user-circle"></i></div>
+			<div class="perfilbox">
+				<p>O perfil serve para o cliente poder ter acesso a alguns detalhes, poder supervisionar as novas ofertas de alojamentos locais e ser aconselhado de acordo com os seus gostos</p>
+			</div>
+			<div class="button1" align="center">
+				<button type="button" href=# class="css3button">Registar-se</button>
+			</div>
+		</div>
+	</div>
+	<div class="ofertas" align="center">
+		<h2>Ofertas dos Clientes</h2>
+		<div class="bigb4" align="center">
+			<div id="icon"><i class="fas fa-user-tie"></i></div>
+			<div class="ofertabox">
+				<p align="center">Aqui se encontram algumas ofertas dos nossos clientes:</p>
+				<ul align="center">
+				    <li align="center"><a href="https://helderfilipegames.wixsite.com/meusite">Hélder Filipe</a></li>
+				    <li align="center"><a href="https://barracasinc.wixsite.com/apartamentos">Barraca Sinc</a></li>
+				    <li align="center"><a href="https://ispg42034212.wixsite.com/alugasonhos">Aluga Sonhos</a></li>
+				    <li align="center"><a href="https://nunofeiteira22.wixsite.com/meusite">Nuno Feiteira</a></li>
+				    <li align="center"><a href="https://joaomrodrigues114.wixsite.com/meusite">João Rodrigues</a></li>
+				    <li align="center"><a href="https://2014itmdiogomateus.wixsite.com/bmyguest">B My Guest</a></li>
+				    <li align="center"><a href="https://fcpereira12.wixsite.com/meusite">FC Pereira</a></li>
+				    <li align="center"><a href="https://ispgayanf.wixsite.com/rentnigths">Rent Nights</a></li>
+				    <li align="center"><a href="https://vitinhogoodgamez.wixsite.com/alojanow">Aloja Now</a></li>
+				    <li align="center"><a href="https://nunoricardo2009.wixsite.com/sitedcw">Nuno Ricardo</a></li>
+				    <li align="center"><a href="https://wandoothe1966.wixsite.com/aplx">APLX</a></li>
+				    <li align="center"><a href="https://pedrovarela999.wixsite.com/dcw1">Pedro Varela</a></li>
+				    <li align="center"><a href="https://danielviana18.wixsite.com/ciaccc">CIA</a></li>
+				    <li align="center"><a href="https://inaliugomes.wixsite.com/hoteldossonhos/">Hotel dos Sonhos</a></li>
+				    <li align="center"><a href="https://nunomiguelbarbosal.wixsite.com/exercicio1nunohugo">Nuno Miguel</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="informacoes" align="center">
+		<h2>Informações</h2>
+		<div class="bigb3">
+			<div id="icon"><i class="fas fa-info-circle"></i></div>
+			<div class="infobox">
+				<h4>Horário:</h4>
+					<p>De Segunda-Feira a Domingo, das 9:00 às 19:00, para proprietários.
+					Disponíveis 24h/dia, 7 dias/semana para os nossos hóspedes.</p>
+				<h4>Contacto:</h4>
+					<p>E-mail: ola@kgb.pt</p>
+					<p>Telefone: 227893909</p>
+				<h4>Morada:</h4>
+					<p>Rua Escola Normal 4000-199 Porto</p>
+			</div>
+			<div class="button1" align="center">
+				<button type="button" href=# class="css3button">Mais Informações</button>
+			</div>		
+		</div>
+	</div>
+	<footer class="rodape" align="center">
+		<h4>Feito por Daniel Sá e Diogo Alves</h4>
+	</footer>
 	
 </body>
 </html>
