--- a/DCW Website/index.html
+++ b/DCW Website/index.html
@@ -13,19 +13,18 @@
 	<div class="menu" align="center">
 		<nav>
 		    <ul>
-		        <li><a href="#">Home</a></li><!--
-		     --><li><a href="#">Serviços</a></li><!--
-		     --><li><a href="#">Registo & Entrada</a></li><!--
-		     --><li><a href="#">Perfil</a></li><!--
-		     --><li><a href="#">Mais Informações</a></li>
+		        <li><a href="index.html">Home</a></li><!--
+		     --><li><a href="#901">Serviços</a></li><!--
+		     --><li><a href="#902">Perfil</a></li><!--
+		     --><li><a href="#903">Ofertas</a></li><!--
+		     --><li><a href="#904">Informações</a></li>
 		    </ul>
 		</nav>
 	</div>
-	<!--<div class="cabecalho">-->
 		<h1 align="center">KGB- Alojamento Local</h1>
 	</div>
-	<div class="fazemos" align="center">
-		<h2 align="center">Serviços</h2>
+	<div class="fazemos" align="center" id="901">
+			<h2 align="center">Serviços</h2>
 			<div class="bigb">
 				<div class="box1">
 					<div class="key" align="center"><i class="fa fa-key" id="key"></i></div>
@@ -51,7 +50,7 @@
 				<div id="but"><button type="button" href=# class="css3button">Solicitar serviço</button></div>
 			</div>
 	</div>
-	<div class="perfil" align="center">
+	<div class="perfil" align="center" id="902">
 		<h2 align="center">Perfil</h2>
 		<div class="bigb2">
 			<div class="icon1" align="center"><i class="fa fa-user-circle"></i></div>
@@ -63,14 +62,107 @@
 			</div>
 		</div>
 	</div>
-	<div class="ofertas" align="center">
+	<div class="ofertas" align="center" id="903">
 		<h2>Ofertas dos Clientes</h2>
 		<div class="bigb4" align="center">
 			<div id="icon"><i class="fas fa-user-tie"></i></div>
 			<div class="ofertabox">
-				<p align="center">Aqui se encontram algumas ofertas dos nossos clientes:</p>
-				<ul align="center">
-				    <li align="center"><a href="https://helderfilipegames.wixsite.com/meusite">Hélder Filipe</a></li>
+				<h4 align="center">Aqui se encontram algumas ofertas dos nossos clientes:</h4>
+				<div class="box6">
+					<div class="camp1" align="center"><a href="https://helderfilipegames.wixsite.com/meusite"><img src="img/img1.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://helderfilipegames.wixsite.com/meusite">My Stay</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://barracasinc.wixsite.com/apartamentos"><img src="img/img2.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://barracasinc.wixsite.com/apartamentos">DREAMFINDER INC</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://ispg42034212.wixsite.com/alugasonhos"><img src="img/img3.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://ispg42034212.wixsite.com/alugasonhos">Aluga Sonhos</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://nunofeiteira22.wixsite.com/meusite"><img src="img/img4.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://nunofeiteira22.wixsite.com/meusite">Alojamento Local Confiança</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://joaomrodrigues114.wixsite.com/meusite"><img src="img/img5.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://joaomrodrigues114.wixsite.com/meusite">APARTAMENTO</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://2014itmdiogomateus.wixsite.com/bmyguest"><img src="img/img6.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://2014itmdiogomateus.wixsite.com/bmyguest">B My Guest</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://fcpereira12.wixsite.com/meusite"><img src="img/img7.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://fcpereira12.wixsite.com/meusite">DI XICCO APPART</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://ispgayanf.wixsite.com/rentnigths"><img src="img/img8.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://ispgayanf.wixsite.com/rentnigths">Rent Nights</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://vitinhogoodgamez.wixsite.com/alojanow"><img src="img/img9.png" align="center" width="300"300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://vitinhogoodgamez.wixsite.com/alojanow">Aloja Now</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://nunoricardo2009.wixsite.com/sitedcw"><img src="img/img10.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://nunoricardo2009.wixsite.com/sitedcw">Apartamento</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://wandoothe1966.wixsite.com/aplx"><img src="img/img11.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://wandoothe1966.wixsite.com/aplx">APLX</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://pedrovarela999.wixsite.com/dcw1"><img src="img/img12.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://pedrovarela999.wixsite.com/dcw1">GRUPO IMOBILIÁRIO</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://danielviana18.wixsite.com/ciaccc"><img src="img/img13.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://danielviana18.wixsite.com/ciaccc">CIA</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://inaliugomes.wixsite.com/hoteldossonhos/"><img src="img/img14.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://inaliugomes.wixsite.com/hoteldossonhos/">Hotel dos Sonhos</a></h3>
+					</div>
+				</div>
+				<div class="box7">	
+					<div class="camp1" align="center"><a href="https://nunomiguelbarbosal.wixsite.com/exercicio1nunohugo"><img src="img/img15.png" align="center" width="300" height="200"></a></div>
+					<div class="a1" align="center">
+						<h3><a href="https://nunomiguelbarbosal.wixsite.com/exercicio1nunohugo">RENT A FLAT</a></h3>
+					</div>
+				</div>
+
+
+
+				<!--<ul align="center">
+				   <li align="center"><a href="https://helderfilipegames.wixsite.com/meusite">Hélder Filipe</a></li>
 				    <li align="center"><a href="https://barracasinc.wixsite.com/apartamentos">Barraca Sinc</a></li>
 				    <li align="center"><a href="https://ispg42034212.wixsite.com/alugasonhos">Aluga Sonhos</a></li>
 				    <li align="center"><a href="https://nunofeiteira22.wixsite.com/meusite">Nuno Feiteira</a></li>
@@ -85,11 +177,11 @@
 				    <li align="center"><a href="https://danielviana18.wixsite.com/ciaccc">CIA</a></li>
 				    <li align="center"><a href="https://inaliugomes.wixsite.com/hoteldossonhos/">Hotel dos Sonhos</a></li>
 				    <li align="center"><a href="https://nunomiguelbarbosal.wixsite.com/exercicio1nunohugo">Nuno Miguel</a></li>
-				</ul>
+				</ul>-->
 			</div>
 		</div>
 	</div>
-	<div class="informacoes" align="center">
+	<div class="informacoes" align="center" id="904">
 		<h2>Informações</h2>
 		<div class="bigb3">
 			<div id="icon"><i class="fas fa-info-circle"></i></div>
