--- a/DCW Website/index.html
+++ b/DCW Website/index.html
@@ -9,19 +9,21 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
-	<div class="cabecalho">
-	<div class="menu" align="center">
-		<nav>
-		    <ul>
-		        <li><a href="index.html">Home</a></li><!--
-		     --><li><a href="#901">Serviços</a></li><!--
-		     --><li><a href="#902">Perfil</a></li><!--
-		     --><li><a href="#903">Ofertas</a></li><!--
-		     --><li><a href="#904">Informações</a></li>
-		    </ul>
-		</nav>
-	</div>
+		<div class="menu" align="center">
+			<nav>
+			    <ul>
+			        <li><a href="index.html">Home</a></li><!--
+			     --><li><a href="#901">Serviços</a></li><!--
+			     --><li><a href="#902">Perfil</a></li><!--
+			     --><li><a href="#903">Ofertas</a></li><!--
+			     --><li><a href="#904">Informações</a></li><!--
+			 	 --><li><a href="#904">Entrar</a></li>
+			    </ul>
+			</nav>
+		</div>
+	<div class="cabecalho" align="center">
 		<h1 align="center">KGB- Alojamento Local</h1>
+		<img src="https://images.wallpaperscraft.com/image/skyscrapers_road_evening_120636_1366x768.jpg" >
 	</div>
 	<div class="fazemos" align="center" id="901">
 			<h2 align="center">Serviços</h2>
