--- a/DCW Website/index.html
+++ b/DCW Website/index.html
@@ -17,7 +17,7 @@
 			     --><li><a href="#902">Perfil</a></li><!--
 			     --><li><a href="#903">Ofertas</a></li><!--
 			     --><li><a href="#904">Informações</a></li><!--
-			 	 --><li><a href="#904">Entrar</a></li>
+			 	 --><li><a href="login.html">Entrar</a></li>
 			    </ul>
 			</nav>
 		</div>
@@ -49,7 +49,7 @@
 						<p>Fornecemos gratuitamente aconselhamento legal sobre a atividade de Alojamento Local e ajudamo-lo a decorar e equipar o seu espaço da forma mais atrativa e eficiente</p>
 					</div>
 				</div>
-				<div id="but"><button type="button" href=# class="css3button">Solicitar serviço</button></div>
+				<div id="but"><a href="servicos.html"><button type="button" href=# class="css3button">Solicitar serviço</button></a></div>
 			</div>
 	</div>
 	<div class="perfil" align="center" id="902">
@@ -60,7 +60,7 @@
 				<p>O perfil serve para o cliente poder ter acesso a alguns detalhes, poder supervisionar as novas ofertas de alojamentos locais e ser aconselhado de acordo com os seus gostos</p>
 			</div>
 			<div class="button1" align="center">
-				<button type="button" href=# class="css3button">Registar-se</button>
+				<a href="registo.html"><button type="button" class="css3button">Registar-se</button></a>
 			</div>
 		</div>
 	</div>
@@ -160,26 +160,6 @@
 						<h3><a href="https://nunomiguelbarbosal.wixsite.com/exercicio1nunohugo">RENT A FLAT</a></h3>
 					</div>
 				</div>
-
-
-
-				<!--<ul align="center">
-				   <li align="center"><a href="https://helderfilipegames.wixsite.com/meusite">Hélder Filipe</a></li>
-				    <li align="center"><a href="https://barracasinc.wixsite.com/apartamentos">Barraca Sinc</a></li>
-				    <li align="center"><a href="https://ispg42034212.wixsite.com/alugasonhos">Aluga Sonhos</a></li>
-				    <li align="center"><a href="https://nunofeiteira22.wixsite.com/meusite">Nuno Feiteira</a></li>
-				    <li align="center"><a href="https://joaomrodrigues114.wixsite.com/meusite">João Rodrigues</a></li>
-				    <li align="center"><a href="https://2014itmdiogomateus.wixsite.com/bmyguest">B My Guest</a></li>
-				    <li align="center"><a href="https://fcpereira12.wixsite.com/meusite">FC Pereira</a></li>
-				    <li align="center"><a href="https://ispgayanf.wixsite.com/rentnigths">Rent Nights</a></li>
-				    <li align="center"><a href="https://vitinhogoodgamez.wixsite.com/alojanow">Aloja Now</a></li>
-				    <li align="center"><a href="https://nunoricardo2009.wixsite.com/sitedcw">Nuno Ricardo</a></li>
-				    <li align="center"><a href="https://wandoothe1966.wixsite.com/aplx">APLX</a></li>
-				    <li align="center"><a href="https://pedrovarela999.wixsite.com/dcw1">Pedro Varela</a></li>
-				    <li align="center"><a href="https://danielviana18.wixsite.com/ciaccc">CIA</a></li>
-				    <li align="center"><a href="https://inaliugomes.wixsite.com/hoteldossonhos/">Hotel dos Sonhos</a></li>
-				    <li align="center"><a href="https://nunomiguelbarbosal.wixsite.com/exercicio1nunohugo">Nuno Miguel</a></li>
-				</ul>-->
 			</div>
 		</div>
 	</div>
@@ -198,7 +178,7 @@
 					<p>Rua Escola Normal 4000-199 Porto</p>
 			</div>
 			<div class="button1" align="center">
-				<button type="button" href=# class="css3button">Mais Informações</button>
+				<a href="informacoes.html"><button type="button" class="css3button">Mais Informações</button></a>
 			</div>		
 		</div>
 	</div>
