--- a/DCW Website/informacoes.html
+++ b/DCW Website/informacoes.html
@@ -15,7 +15,7 @@
             <input type="text" name="nome" placeholder="Nome">
             <input type="text" name="email" placeholder="Email">
             <textarea name="mensagem" placeholder="Escreva aqui a sua mensagem."></textarea>
-            <input type="button" value="Enviar" id="botao">
+            <a href="index.html"><input type="button" value="Enviar" id="botao"></a>
         </form>
         
     </body>
