--- a/DCW Website/login.html
+++ b/DCW Website/login.html
@@ -14,7 +14,7 @@
             <input type="text" name="utilizador" placeholder="Utilizador">
             <input type="text" name="palavrapasse" placeholder="Palavra Passe">
             <div class="login" align="left"><a href="registo.html"><p>Ainda não tem conta?</p></a></div>
-            <input type="button" value="Login" id="botao">
+            <a href="index.html"><input type="button" value="Login" id="botao"></a>
         </form>      
     </body>
     </html>
