--- a/DCW Website/registo.html
+++ b/DCW Website/registo.html
@@ -17,7 +17,7 @@
             <input type="text" name="palavrapasse" placeholder="Insira uma palavra passe">
             <input type="text" name="confirmarpalavrapasse" placeholder="Confirmar a sua Palavra Passe">
             <div class="login" align="left"><a href="login.html"><p>Já tem conta?</p></a></div>
-            <input type="button" value="Enviar" id="botao">
+            <a href="index.html"><input type="button" value="Enviar" id="botao"></a>
         </form>
         
     </body>
