--- a/DCW Website/servicos.html
+++ b/DCW Website/servicos.html
@@ -23,7 +23,7 @@
                     <option value="147">Consultoria e Decoração</option>
                 </select>
             </div>
-            <input type="button" value="Enviar" id="botao">
+            <a href="index.html"><input type="button" value="Enviar" id="botao"></a>
         </form>
         
     </body>
