--- a/DCW Website/index.html
+++ b/DCW Website/index.html
@@ -166,7 +166,7 @@
 	<div class="informacoes" align="center" id="904">
 		<h2>Informações</h2>
 		<div class="bigb3">
-			<div id="icon"><i class="fas fa-info-circle"></i></div>
+			<div id="icon"><i class="fa fa-info-circle"></i></div>
 			<div class="infobox">
 				<h4>Horário:</h4>
 					<p>De Segunda-Feira a Domingo, das 9:00 às 19:00, para proprietários.
