--- a/DCW Website/login.html
+++ b/DCW Website/login.html
@@ -7,14 +7,26 @@
     </head>
     <body>
         <div class="cabecalho">
-            <h1 align="left">KGB- Alojamento Local</h1>
+            <div class="menu" align="center">
+                <nav>
+                    <ul>
+                        <li id="vhs"><a href="index.html"><h1>KGB- Alojamento Local</h1></a></li>
+                        <li><a href="index.html">Home</a></li><!--
+                     --><li><a href="index.html#901">Serviços</a></li><!--
+                     --><li><a href="index.html#902">Perfil</a></li><!--
+                     --><li><a href="index.html#903">Ofertas</a></li><!--
+                     --><li><a href="index.html#904">Informações</a></li><!--
+                     --><li><a href="login.html">Entrar</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
         <form action="servicos" method="post" class="form-servicos" >
             <h2 class="form-titulo">Login</h2>
             <input type="text" name="utilizador" placeholder="Utilizador">
             <input type="text" name="palavrapasse" placeholder="Palavra Passe">
             <div class="login" align="left"><a href="registo.html"><p>Ainda não tem conta?</p></a></div>
-            <a href="index.html"><input type="button" value="Login" id="botao"></a>
+            <input type="button" value="Login" id="botao">
         </form>      
     </body>
     </html>
