--- a/DCW Website/informacoes.html
+++ b/DCW Website/informacoes.html
@@ -7,7 +7,19 @@
     </head>
     <body>
         <div class="cabecalho">
-            <h1 align="left">KGB- Alojamento Local</h1>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li id="vhs"><a href="index.html"><h1>KGB- Alojamento Local</h1></a></li>
+                        <li><a href="index.html">Home</a></li><!--
+                     --><li><a href="index.html#901">Serviços</a></li><!--
+                     --><li><a href="index.html#902">Perfil</a></li><!--
+                     --><li><a href="index.html#903">Ofertas</a></li><!--
+                     --><li><a href="index.html#904">Informações</a></li><!--
+                     --><li><a href="login.html">Entrar</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
         <form action="servicos" method="post" class="form-servicos" >
             <h2 class="form-titulo">Informações</h2>
@@ -15,7 +27,7 @@
             <input type="text" name="nome" placeholder="Nome">
             <input type="text" name="email" placeholder="Email">
             <textarea name="mensagem" placeholder="Escreva aqui a sua mensagem."></textarea>
-            <a href="index.html"><input type="button" value="Enviar" id="botao"></a>
+            <input type="button" value="Enviar" id="botao">
         </form>
         
     </body>
