--- a/DCW Website/servicos.html
+++ b/DCW Website/servicos.html
@@ -35,7 +35,7 @@
                     <option value="147">Consultoria e Decoração</option>
                 </select>
             </div>
-            <a href="index.html"><input type="button" value="Enviar" id="botao"></a>
+            <input type="button" value="Enviar" id="botao">
         </form>
         
     </body>
