--- a/DCW Website/servicos.html
+++ b/DCW Website/servicos.html
@@ -28,7 +28,7 @@
             <input type="text" name="email" placeholder="Email">
             <input type="text" name="telemovel" placeholder="Telemóvel">
             <div class="bloco" align="left">
-                <label for="exampleInputEmail1">Seletor</label>
+                <label for="exampleInputEmail1">Serviço:</label>
                 <select class="form-control">
                     <option value="145">Check-in</option>
                     <option value="146">Limpeza e Manutenção</option>
